		- potential energy private data for rigid bodies
		  (Louis Gagnon)
		- allow meta-data in fixed-step file drive input file
		- added more functions to model namespace
		- added previous time step functions to model namespace
		- added support for f95 modules (Reinhard Resch)
		- added gravity element output
		- added module-asynchronous_machine (Reinhard Resch)
		- added getaddrinfo support
	Backward compatibility issues:
		- output of reference node forces changed in modal mapping
	Known issues:
	Bug fixes:
		- fix numpy include path in libmbc (Olivier Ricou)
		- import fixes to kd_* by Ilia Zveda
		  <http://www.mathworks.com/matlabcentral/fileexchange/26649-kdtree-implementation-in-matlab>
		- fix swig detection (noted by Ria Malhan)
		- fix initialization of mbc handlers in C++ wrappers
		- fix loose coupling in external force
		  (noted by Tingnan Zhang)
		- fix handling of KLU refactor (noted by Romuald Noret)
		- fix math parser recursive call (noted by Doug Baldwin)
		- fix initial assembly dof init (noted by Doug Baldwin)
		- fix residual initial assembly of deformable displacement
		  joint; Jacobian still broken (noted by Louis Gagnon)
		- fix Euler 313 matrix computation (noted by Doug Baldwin)
		- fix joint regularization when joint is driven
		  (noted by Romuald Noret)
		- fix reference angular acceleration in abs2rel.awk
		  (Patrick Rix)
		- clean up after scanning with cppckeck

MBDyn 1.3.18
	Enhancements:
		- added initial values for socket stream drive
	Backward compatibility issues:
		- fixed typo in angular velocity priv data string selection
		  in total joint family
	Known issues:
	Bug fixes:
		- fixed dof/eq description of driven elements
		- added missing mbc_py_interface.py file

MBDyn 1.3.17
	Enhancements:
		- improved sanity checks when using arpack for eigenanalysis
		- improved error checking in fixed/variable step file driver
		  (noted by Stefan van't'Hoff)
		- added alpha-first generic aerodynamic element