@@ -29,6 +29,7 @@ MBDyn 1.X-Devel
 		- added gravity element output
 		- added module-asynchronous_machine (Reinhard Resch)
 		- added getaddrinfo support
+		- added struct node labels logging (Reinhard Resch)
 	Backward compatibility issues:
 		- output of reference node forces changed in modal mapping
 	Known issues:
